@@ -1,3 +1,10 @@
+== 2026-02-15 03:37 == Bugfix: Auto-select not triggering when matched channels are offline (v1.2.0-beta.11) ==
+
+Auto-select for drop channels only triggered when zero channels matched a campaign.
+Now also triggers when matched channels exist but are ALL offline, so a live temp
+channel gets created from the allowed list or game directory.
+- internal/farmer/drops.go (processDrops auto-select condition)
+
 == 2026-02-15 01:02 == Bugfix: Drop assigned to multiple channels instead of one (v1.2.0-beta.10) ==
 
 All matching channels got P0 + drop info for the same drop, wasting Spade slots.
